--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+ 
   "name": "nextn",
   "version": "0.1.0",
   "private": true,
@@ -50,8 +51,11 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
@@ -64,3 +68,5 @@
     "typescript": "^5"
   }
 }
+
+
